--- a/CSS/skins/color-3.css
+++ b/CSS/skins/color-3.css
@@ -1,3 +1,8 @@
 :root {
-  --skin-color : #37b182;
+  --skin-color: #37b182;
+}
+
+.home .home-img img {
+
+  background: url('/Imgs/33333.png');
 }
