--- a/CSS/skins/color-4.css
+++ b/CSS/skins/color-4.css
@@ -1,3 +1,8 @@
 :root {
-  --skin-color : #1854b4;
+  --skin-color: #1854b4;
+}
+
+.home .home-img img {
+
+  background: url('/Imgs/44444.png');
 }
