--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 :root {
-  --bg-black-900: #f2f2fc;
+  --bg-black-900: #dcdce6;
   --bg-black-100: #f2f9ff;
-  --bg-black-50: #e8dfec;
+  --bg-black-50: #ffffff;
   --text-black-900: #302e4d;
   --text-black-700: #504e70;
 
@@ -47,7 +47,7 @@ ul {
   padding: 0 30px;
   opacity: 1;
   position: fixed;
-  left: 270px;
+  left: 250px;
   top: 0;
   right: 0;
   bottom: 0;
@@ -84,8 +84,8 @@ ul {
 }
 
 .padd-15 {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .shadow-dark {
@@ -167,13 +167,13 @@ ul {
 /* Aside Start */
 
 .aside {
-  width: 270px;
+  width: 250px;
   background: var(--bg-black-100);
   position: fixed;
   left: 0;
   top: 0;
-  border-right: 1px solid var(--bg-black-50);
-  padding: 30px;
+  /* border-right: 1px solid var(--bg-black-50); */
+  /* padding: 30px; */
   z-index: 10;
   height: 100%;
   display: flex;
@@ -228,10 +228,10 @@ ul {
 .aside .nav-toggle {
   height: 40px;
   width: 45px;
-  border: 1px solid var(--bg-black-50);
+  /* border: 1px solid var(--bg-black-50); */
   cursor: pointer;
   position: fixed;
-  left: 300px;
+  left: 250px;
   top: 20px;
   border-radius: 5px;
   background: var(--bg-black-100);
@@ -285,18 +285,68 @@ ul {
 
 .aside .nav {
   margin-bottom: 50px;
+  width: 100%;
+  margin-left: 10px;
 }
 
 .aside .nav li {
   margin-bottom: 20px;
   display: block;
+
+}
+
+.aside .nav li:hover ,
+.aside .nav li.hovered {
+  height: 75px;
+  background: var(--bg-black-900);
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 20px;
+  margin-left: 20px;
+  position: relative;
+  font-size: 20px;
+  
+}
+
+
+.aside .nav li:hover a::before,
+.aside .nav li.hovered a::before {
+  
+  content: '';
+  position: absolute;
+  background: transparent;
+  width: 50px;
+  height: 50px;
+  top: -50px;
+  right: 0;
+  border: 25px;
+  border-radius: 50%;
+  box-shadow: 30px 30px 0px 1px var(--bg-black-900);
+  
+}
+.aside .nav li:hover a::after,
+.aside .nav li.hovered a::after {
+  content: '';
+  position: absolute;
+  background: transparent;
+  width: 50px;
+  height: 50px;
+  bottom: -50px;
+  right: 0;
+  border: 25px;
+  border-radius: 50%;
+  box-shadow: 30px -30px 0px 1px var(--bg-black-900);
+  
 }
 
 .aside .nav li a {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 600;
   display: block;
-  border-bottom: 1px solid var(--bg-black-50);
+  /* border-bottom: 1px solid var(--bg-black-50); */
   color: var(--text-black-900);
   padding: 5px 15px;
 
@@ -350,18 +400,22 @@ h3.my-profession span {
   font-size: 20px;
   color: var(--text-black-700);
   padding-right: 30px;
+  line-height: 2;
 }
 
 .home .home-img {
   flex: 0 0 40%;
   max-width: 40%;
   position: relative;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.home-img::after {
+/* .home-img::after {
   content: '';
   position: absolute;
+  display: flex;
   width: 80px;
   height: 80px;
   border-bottom: 10px solid var(--skin-color);
@@ -373,19 +427,22 @@ h3.my-profession span {
 .home-img::before {
   content: '';
   position: absolute;
+  display: block;
   width: 80px;
   height: 80px;
   border-top: 10px solid var(--skin-color);
   border-left: 10px solid var(--skin-color);
   left: 30px;
   top: -30px;
-}
+} */
 
 .home .home-img img {
-  width: 75%;
-  border-radius: 0px 50px;
+  width: 100%;
+  border-top-right-radius: 20%;
+  border-bottom-left-radius: 20%;
   box-shadow: 0px 0px 20px 0px var(--skin-color);
-
+  justify-items: center;
+  align-items: center;
 }
 
 /* Home End */
@@ -799,7 +856,7 @@ h3.my-profession span {
   }
 
   .aside {
-    left: -270px;
+    left: -250px;
   }
 
   .aside.open {
@@ -820,7 +877,7 @@ h3.my-profession span {
   }
 
   .section.open {
-    left: 270px;
+    left: 250px;
   }
 
   .about .about-content .personal-info .info-item p span {
