--- a/CSS/skins/color-2.css
+++ b/CSS/skins/color-2.css
@@ -1,7 +1,7 @@
 :root {
   --skin-color : #fa5b0f;
 }
-.home .home-img img {
+/* .home .home-img img {
   
   background: url('/Imgs/22222.png');
-}
+} */
