--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,7 @@ body {
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   transition: 0.3s;
+  text-transform: capitalize;
 }
 
 * {
@@ -218,6 +219,7 @@ ul {
   font-size: 30px;
   letter-spacing: 5px;
   position: relative;
+  font-family: 'Clicker Script', cursive;
 }
 
 .aside .logo a span {
@@ -247,64 +249,6 @@ ul {
   right: 0;
 }
 
-/* .aside .nav-toggle {
-  height: 40px;
-  width: 45px;
-  border: 1px solid var(--bg-black-50);
-  cursor: pointer;
-  position: fixed;
-  left: 250px;
-  top: 20px;
-  border-radius: 5px;
-  background: var(--bg-black-100);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.3s ease;
-}
-
-.aside .nav-toggle span {
-  height: 2px;
-  width: 18px;
-  background: var(--skin-color);
-  display: inline-block;
-  position: relative;
-}
-
-.aside .nav-toggle.open span {
-  background-color: transparent;
-}
-
-.aside .nav-toggle.open span::before {
-  transform: rotate(45deg);
-  top: 0;
-}
-
-.aside .nav-toggle span::before {
-  content: '';
-  height: 2px;
-  width: 18px;
-  background: var(--skin-color);
-  position: absolute;
-  top: -6px;
-  left: 0;
-}
-
-.aside .nav-toggle span::after {
-  content: '';
-  height: 2px;
-  width: 18px;
-  background: var(--skin-color);
-  position: absolute;
-  bottom: -6px;
-  left: 0;
-}
-
-.aside .nav-toggle.open span::after {
-  transform: rotate(-45deg);
-  top: 0;
-} */
-
 .aside .nav {
   margin-bottom: 50px;
   width: 100%;
@@ -320,7 +264,6 @@ ul {
   font-size: 20px;
   font-weight: 600;
   display: block;
-  /* border-bottom: 1px solid var(--bg-black-50); */
   color: var(--text-black-900);
   padding: 5px 15px;
   transition: 0.3s;
@@ -469,29 +412,7 @@ h3.my-profession span {
   align-items: center;
 }
 
-/* .home-img::after {
-  content: '';
-  position: absolute;
-  display: flex;
-  width: 80px;
-  height: 80px;
-  border-bottom: 10px solid var(--skin-color);
-  border-right: 10px solid var(--skin-color);
-  right: 30px;
-  bottom: -30px;
-}
 
-.home-img::before {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 80px;
-  height: 80px;
-  border-top: 10px solid var(--skin-color);
-  border-left: 10px solid var(--skin-color);
-  left: 30px;
-  top: -30px;
-} */
 
 .home .home-img img {
   width: 100%;
@@ -531,6 +452,7 @@ h3.my-profession span {
   font-size: 16px;
   line-height: 25px;
   color: var(--text-black-700);
+
 }
 
 .about .about-content .personal-info {
@@ -907,63 +829,114 @@ h3.my-profession span {
 
 /* contact End */
 
-@media (max-width:1025px) {
 
-  .section {
-    left: 100px;
-    padding-bottom: 100px;
-  }
-
-  .about .about-content .personal-info .info-item p span {
-    display: block;
-    margin-left: 0;
-  }
-
-
-}
 
 @media (max-width:991px) {
+  .section {
+    padding-top: 60px;
+
+  }
+
+  .home p {
+    text-align: center;
+    padding-right: 0;
+  }
+
+  .home {
+    text-align: center;
+  }
 
   .aside {
     display: none;
   }
 
-  .section {
-    left: 0;
-  }
-
   .nav-toggle {
-    width: 100%;
+    flex: 0 0 75%;
+    max-width: 75%;
     background: var(--bg-black-100);
-    position: fixed;
-    left: 0;
-    top: 93%;
-    bottom: 0;
+    position: relative;
     z-index: 10;
-    height: 100px;
+    height: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: all 0.3s ease;
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 50px;
   }
 
-  .nav-too {
+
+  .nav-toggle .logo {
+    flex: 0 0 50%;
+    max-width: 50%;
     display: flex;
-    justify-content: space-around;
+    left: 10%;
+    transform: translate(10%, 0);
+
+  }
+
+  .nav-toggle .logo a {
+    color: var(--text-black-900);
+    font-weight: 300;
+    padding: 15px 20px;
+    font-size: 30px;
+    letter-spacing: 5px;
+    position: relative;
+    font-family: 'Clicker Script', cursive;
+  }
+
+  .nav-toggle .logo a span {
+    font-family: 'Clicker Script', cursive;
+    font-size: 30px;
+  }
+
+  .nav-toggle .logo a::before {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-bottom: 5px solid var(--skin-color);
+    border-left: 5px solid var(--skin-color);
+    bottom: 10px;
+    left: 0;
+  }
+
+  .nav-toggle .logo a::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-top: 5px solid var(--skin-color);
+    border-right: 5px solid var(--skin-color);
+    top: 10px;
+    right: 0;
+  }
+
+  .section {
+    left: 0;
+
+  }
+
+
+
+  .nav-too {
+    flex: 0 0 50%;
+    max-width: 50%;
+    right: 50%;
+    transform: translate(-5%, 0);
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
 
   .nav-too li {
     position: relative;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: inline;
     text-align: center;
-    margin-bottom: 40px;
-    line-height: 0.9;
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: -5px;
+
   }
 
   .nav-too li:hover,
@@ -981,7 +954,7 @@ h3.my-profession span {
 
   .nav-too li a i {
     font-size: 20px;
-
+    padding-top: 10px;
   }
 
   .nav-too li a.active {
@@ -1013,9 +986,18 @@ h3.my-profession span {
     justify-content: center;
     align-items: center;
   }
+
+  .style-switcher {
+    position: absolute;
+    margin-top: 50px;
+  }
 }
 
 @media (max-width:767px) {
+  .section {
+    padding-top: 10px;
+
+  }
 
   .home p {
     text-align: center;
@@ -1063,4 +1045,32 @@ h3.my-profession span {
     display: contents;
     font-size: large;
   }
+
+  .nav-toggle {
+    position: relative;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-toggle .logo {
+    display: none;
+
+
+  }
+
+  .nav-too {
+    position: relative;
+    flex: 0 0 100%;
+    max-width: 100%;
+    left: 5%;
+  }
+
+  .style-switcher {
+    position: absolute;
+    margin-top: 50px;
+  }
+
+
 }
