--- a/CSS/style-switcher.css
+++ b/CSS/style-switcher.css
@@ -8,7 +8,7 @@
   background: var(--bg-black-100);
   z-index: 101;
   border-radius: 5px;
-  transition: all 0.3s ease;
+  transition:  0.3s ;
   transform: translateX(100%);
 
 }
@@ -27,7 +27,7 @@
   border: 1px solid var(--bg-black-50);
   margin-right: 25px;
   cursor: pointer;
-  transition: all 0.3s ease;
+  transition:  0.3s ;
   border-radius: 50%;
 }
 
@@ -62,7 +62,7 @@
   height: 30px;
   width: 30px;
   border-radius: 50%;
-  /* border: 1px solid red; */
+  /* border: 5px solid var(--bg-black-900); */
 }
 
 .style-switcher .color-1 {
