--- a/CSS/style-switcher.css
+++ b/CSS/style-switcher.css
@@ -1,6 +1,6 @@
 .style-switcher {
   position: fixed;
-  right: 0;
+  right: -50px;
   top: 60px;
   padding: 15px;
   width: 200px;
@@ -10,6 +10,7 @@
   border-radius: 5px;
   transition:  0.3s ;
   transform: translateX(100%);
+  margin:50px
 
 }
 .style-switcher.open {
