--- a/CSS/skins/color-1.css
+++ b/CSS/skins/color-1.css
@@ -2,7 +2,8 @@
   --skin-color: #ec1839;
 }
 
-/* .home .home-img img {
+.home .home-img img {
+  width: 100%;
 
-  background: url('Imgs/11111.png');
-} */
+  background: url('/Imgs/11111.png');
+}
